--- a/research.html
+++ b/research.html
@@ -134,7 +134,7 @@
 									adds uncertainties of the structural gaps between these two phases, but also increases the time cost and degrades 
 									the confidence of gas-phase structural measurements.</p>
 									<p>To effectively and confidently dissect the sialylation effects on the overall 3D arrangements of glycoproteins 
-									with high-level microheterogeneity, the power of Native IM-based <strong>Lossless Strcutural MS (LSMS)</strong> strategy is 
+									with high-level microheterogeneity, the power of Native IM-based <strong>Lossless Structural MS (LSMS)</strong> strategy is 
 									demonstrated on a model carrier glycoprotein TF. To overcome the barrier of multistep, time-consuming 
 									charge-selection/optimization processes and charge-bias effects on protein structures, the LSMS strategy 
 									adopts a “charge selection-free” concept, in which all forms of protein ions’ structures and topologies 
@@ -212,9 +212,9 @@
 									
 									<h3><U><strong><font color='purple'>Future SMS: Targeted Proteomics-guided Native SMS</font></strong></U></h3>									
 									<p>Next-generation Native SMS should smartly and comprehensively integrate the individual benefits and advantages of ambient MS (in situ MS),
-									traditional native IM-MS and targeted proteomics. We are dedicated to pushing native IM-MS more and more "NATIVE", with special focus on 
+									traditional native IM-MS and targeted proteomics. We are dedicated to pushing native IM-MS more and <strong>more "NATIVE"</strong>, with special focus on 
 									technical improvements on analytical speed, sensitivity and throughput. These fundamental MS research should be indispensable prerequisite 
-									of reporting more "real" and closer to biological circumstances, thus facilitating MS to be developed as something really meaningful to human
+									of reporting <strong>more "real"</strong> and closer to biological circumstances, thus facilitating MS to be developed as something really meaningful to human
 									disease fighting through protein-level drug-linked and receptor-related fundamental research and industrial applications.</p>
 								</article>
 
