--- a/publication.html
+++ b/publication.html
@@ -73,7 +73,7 @@
 									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff"><i><strong><font color='red'>Nature Communications Editors’ HIGHLIGHTS</font></strong></i></a>.]<br>
 									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract"><i><strong><font color='red'>F1000Prime Recommendation</font></strong></i></a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
 									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='red'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]<br>
-									[<i><strong><font color='red'>Rapid SMS</font></strong></i>.]</p>
+									[<i><strong><font color='red'>Rapid SMS: nsPCR</font></strong></i>.]</p>
 									<p><strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
 									<a href="https://www.nature.com/articles/s41467-019-12346-8"><U>Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
