--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 															教授Brandon Ruotolo。2012年6月，本科毕业于江西师范大学，获学士学位。2021年2月，加入南开大学化学学院，分析科学研究中心。
 															相关课题及成果已成功申报1项国家基金委面上项目（参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金
 															（主持），并获批一项中国授权专利。鉴于在超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会
-															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，申请人
+															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，李博士
 															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
 															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</strong></p>
 														</article>
