--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 									<section>
 										<a href="research.html" class="image featured"><img src="images/in_cell_ms.jpg" alt="" /></a>
 										<header>
-											<h3>In-cell MS+</h3>
+											<h3>Ultrafast SMS+</h3>
 										</header>
-										<p> <a href="https://pubs.acs.org/doi/abstract/10.1021/acs.analchem.7b05055"><strong>In-cell MS</strong></a> is a new in situ MS tool,
-										proposed in 2018 by Li et al. and desinged for rapid protein and protein complex identification from single living cells. </p>
+										<p> <strong>Ultrafast SMS</strong> is a new structural MS conception/tool which aims to rapidly and reliably assess protein 3D structures and 
+										subtle conformational changes arising from biological process-derived stimulus, as fast as <a href="https://www.nature.com/articles/s41467-019-12548-0">nanosecond time scale</a>. </p>
 									</section>
 
 							</div>
