--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="research.html" class="image featured"><img src="images/in_cell_ms.jpg" alt="" /></a>
+										<a href="research.html" class="image featured"><img src="images/ultrafast_sms.jpg" alt="" /></a>
 										<header>
 											<h3>Ultrafast SMS+</h3>
 										</header>
