--- a/research.html
+++ b/research.html
@@ -53,31 +53,27 @@
 										<h2><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 									</header>
 									<a class="image featured"><img src="images/limslab_projects_full.jpg" width="50%" height="50%" alt="" /></a>
-									<h3><U><strong><font color='red'>Rapid: In-cell MS + Nanosecond Photochemical Reaction</font></strong></U></h3>
+									<h3><U><strong><font color='red'>Rapid: Nanosecond Photochemical Structure Probing</font></strong></U></h3>
 									<p>Dr. Li has the long-standing research interest focusing on the development 
-									and application of ultrafast separation techniques capable of in situ purification 
+									and application of <strong>ultrafast</strong> separation techniques capable of in situ purification 
 									and identification of native proteins directly from living cells. As such, one needs 
 									to in situ remove intracellular and extracellular matrices surrounding cell-trapped 
 									target proteins, where the separation time scale should be as short as possible to 
-									maintain the biologically relevant structural information. To achieve this goal, 
-									he has developed a new in-solution separation method based on millisecond micro-electrophoresis 
-									and integrated into MS called <strong>in-cell MS</strong> (Li et al. Anal. Chem. 2016, 88, 10860-10866), 
+									maintain the biologically relevant structural information. During his PhD career, 
+									Gongyu has developed a ultrafast in-solution separation method and integrated into MS (Li et al. Anal. Chem. 2016, 88, 10860-10866), 
 									and has demonstrated its utility for several protein systems directly from living cells 
-									(Li et al. Anal. Chem. 2018, 90, 3409-3415). In this manner Dr. Li has assembled both continuous, 
-									millisecond electrophoretic separation and online electroporation-induced protein release into a 
+									(Li et al. Anal. Chem. 2018, 90, 3409-3415). In this manner Dr. Li has assembled both ultrafast separation and online electroporation-induced protein release into a 
 									small region inside a nanospray needle. In a recent study (Anal. Chem. 2019, 91, 10441-10447), 
-									Dr. Li and coworkers have provided further evidence of ultrafast microelectrophoresis as a 
-									key contributing factor for in-cell MS design. Meanwhile, Dr. Li’s innovative design for 
-									nanospray and microelectrophoresis facilitated the mechanistic investigation of click 
-									chemical reactions (Chem. Sci. 2017, 8, 214-222). Benefiting from Gongyu’s contribution to 
-									improved understanding of the basic mechanisms and early applications of ultrafast electrophoresis, 
+									Dr. Li and coworkers have provided further evidence of ultrafast separation. Meanwhile, Dr. Li’s ultrafast separation work 
+									facilitated the mechanistic investigation of click chemical reactions (Chem. Sci. 2017, 8, 214-222). Benefiting from Gongyu’s contribution to 
+									improved understanding of the basic mechanisms and early applications of ultrafast separation, 
 									this separation technique has recently been used for in situ chemical profiling of single 
 									living neurons (PNAS, 2018, 114, 2586-2591) and for revealing a novel glutamate biosynthetic 
 									pathway in the brain (Cell, 2018, 173, 1716-1727). In addition to contribution to the 
 									solution-phase separation improvement, Gongyu also devoted himself in gas-phase separation 
 									technique improvement, such as the development of a new regime for ion mobility-mass spectrometry 
 									(IM-MS)-based protein structural identification (Li et al. Anal. Chem. 2018, 90, 7997-8001). 
-									Dr. Li is ambitious to combine microelectrophoresis-equipped in-cell MS with gas-phase structural tool, 
+									Dr. Li is ambitious to combine ultrafast solution-phase separation with gas-phase structural MS tool, 
 									IM-MS, serving as an emerging alternative to probe more structural details of native proteins 
 									directly from living cells.</p>
 									<p>While Dr. Li is much interested in serving as human disease fighter, he believes the high-quality 
