--- a/research.html
+++ b/research.html
@@ -70,9 +70,9 @@
 									this separation technique has recently been used for in situ chemical profiling of single 
 									living neurons (PNAS, 2018, 114, 2586-2591) and for revealing a novel glutamate biosynthetic 
 									pathway in the brain (Cell, 2018, 173, 1716-1727). In addition to contribution to the 
-									solution-phase separation improvement, Gongyu also devoted himself in gas-phase separation 
-									technique improvement, such as the development of a new regime for ion mobility-mass spectrometry 
-									(IM-MS)-based protein structural identification (Li et al. Anal. Chem. 2018, 90, 7997-8001). 
+									solution-phase separation improvement, Gongyu also devoted himself in the development of online gas-phase structural 
+									technique, such as the development of a new regime for <strong>ion mobility-mass spectrometry</strong> 
+									(IM-MS)-based identification of soltuion-phase conformational changes (Li et al. Anal. Chem. 2018, 90, 7997-8001). 
 									Dr. Li is ambitious to combine ultrafast solution-phase separation with gas-phase structural MS tool, 
 									IM-MS, serving as an emerging alternative to probe more structural details of native proteins 
 									directly from living cells.</p>
