--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 											significant <strong>challenge</strong> is, however, how to remove intracellular and extracellular matrices 
 											surrounding target biomolecules without external perturbations on their native biological 
 											states, where the separation time scale should be as short as possible to maintain the 
-											biologically relevant structural information. To solve this problem, Dr. Li has developed 
-											a <U>millisecond micro-electrophoresis</U> regime and integrated into nanospray, generating a 
-											new versatile ambient MS method called <strong>In-cell MS</strong> (Li et al. 
+											biologically relevant structural information. To solve this problem, during his PhD career, Dr. Li has involved in  
+											the development of a <U>Ultrafast Separation</U> regime and integrated into nanospray, generating a 
+											new versatile ambient MS method (Li et al. 
 											Anal. Chem. 2016, 88, 10860-10866), and has demonstrated its utility for several protein 
 											systems directly from living cells (Li et al. Anal. Chem. 2018, 90, 3409-3415). In addition 
-											to contribution to the in-situ identification of native proteins, Gongyu also devoted himself 
+											to contribution to the <strong>Ultrafast MS</strong> identification of native proteins, Gongyu also devoted himself 
 											in gas-phase protein structural interrogations, such as the development of a new regime for 
 											<strong>ion mobility-mass spectrometry (IM-MS)</strong>-based protein structural manipulations (Li et al. 
 											Anal. Chem. 2018, 90, 7997-8001). Dr. Li’s postdoc research work is focused on further 
