--- a/people.html
+++ b/people.html
@@ -45,7 +45,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Team Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Team Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -140,7 +140,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Alumni Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Alumni Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -223,7 +223,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Collaborator Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Collaborator Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
