--- a/news.html
+++ b/news.html
@@ -45,7 +45,7 @@
 				<section id="main">
 					<div class="container">
 					    <header>
-							<h2>Welcome to <strong><font color='green'><U>NEWS Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>NEWS Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row">
 							<!-- Sidebar -->
