--- a/publication.html
+++ b/publication.html
@@ -49,7 +49,7 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2>Welcome to <strong><font color='green'><U>PUB Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+										<h2>Welcome to <strong><font color='green'><U>PUB Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 									</header>									
 									<h3><strong><U><font color='blue'>At Nankai University</font></U>:</strong></h3>
 									<h3><strong>2021</strong></h3>
