--- a/publication.html
+++ b/publication.html
@@ -78,7 +78,7 @@
 									<a href="https://www.nature.com/articles/s41467-019-12346-8"><U>Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
 									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
-									[<i><strong><font color='red'>High-resolution IM-MS</font></strong></i>.]</p>
+									[<i><strong><font color='red'>High-resolution SMS</font></strong></i>.]</p>
 									<p><strong>20</strong>. <strong>Gongyu Li</strong>, Daniel Delafield, and Lingjun Li*. 
 									<a href="https://www.sciencedirect.com/science/article/pii/S016599361830654X?via%3Dihub"><U>Improved 
 									Structural Elucidation of Peptide Isomers and Their Receptors Using Advanced Ion Mobility-Mass Spectrometry..
@@ -97,7 +97,7 @@
 									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b00716"><U>Ultrafast Micro-Electrophoresis: 
 									Behind Direct Mass Spectrometry Measurement for Proteins and Metabolites in Living Cell/Cells.
 									</a></U> <strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) <br>
-									[<i><strong><font color='red'>In-cell MS: Further Mechanism</font></strong></i>.]</p>
+									[<i><strong><font color='red'>Ultrafast MS: Further Mechanism</font></strong></i>.]</p>
 									<p><strong>16</strong>. Shihui Zheng, Siming Yuan, Zhuanghao Hou,<strong>Gongyu Li</strong>, Yuting Chen, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rcm.8493"><U>Charge-dependent modulation of specific and 
 									nonspecific protein-metal ion interactions in nanoelectrospray ionization mass spectrometry.
@@ -114,7 +114,7 @@
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.7b05055"><U>In-situ Living Cell 
 									Protein Analysis by Single-step Mass Spectrometry.
 									</a></U> <strong><i>Anal. Chem. </i></strong> 2018, 90, 3409-3415. (‡, co-first author)<br>
-									[<i><strong><font color='red'>In-cell MS: Workflow</font></strong></i>.]</p>
+									[<i><strong><font color='red'>Ultrafast MS: Workflow</font></strong></i>.]</p>
 									<p><strong>12</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan‡, Shihui Zheng, Yuting Chen, Zhen Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://link.springer.com/article/10.1007%2Fs13361-017-1789-6"><U>The effect of salts in promoting specific 
 									and competitive interactions between zinc finger proteins and metals.
@@ -130,7 +130,7 @@
 									<p><strong>9</strong>. <strong>Gongyu Li</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*.  
 									<a href="http://pubs.acs.org/doi/abs/10.1021/acs.analchem.6b00032"><U>Binding states of protein-metal complexes in cells.
 									</a></U> <strong><i>Anal. Chem. </i></strong> 2016, 88, 10860-10866. <br>
-									[<i><strong><font color='red'>In-cell MS: Mechanism + Application</font></strong></i>.]</p>
+									[<i><strong><font color='red'>Ultrafast MS: Mechanism + Application</font></strong></i>.]</p>
 									<p><strong>8</strong>. Yue Yin, <strong>Gongyu Li</strong>, Yafeng Guan and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/rcm.7621"><U>Sheathless interface to match 
 									flow rate of capillary electrophoresis with electrospray mass spectrometry using regular-sized capillary.
