--- a/news.html
+++ b/news.html
@@ -100,7 +100,7 @@
 												<h2>FW: <a href="https://www.lilabs.org/post/dr-gongyu-li-accepts-top-faculty-position">Dr. Gongyu Li Accepts Top Faculty Position!</a> </h2>
 											</header>											
 											<p>by Graham Delafield @ Prof. Lingjun Li Lab, UW-Madison <br>
-											<p>September 18, 2020</p>
+											September 18, 2020</p>
 											<p>Looking back on his time in the Li Research Group, postdoctoral fellow 
 											Dr. Gongyu Li believes his time spent in Madison was fundamental to his 
 											growth towards academic faculty. Now beginning his fourth year of fellowship 
