--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
 											<header>
 												<h2>FW: <a href="https://www.lilabs.org/post/dr-gongyu-li-accepts-top-faculty-position">Dr. Gongyu Li Accepts Top Faculty Position!</a> </h2>
 											</header>											
-											<p>by Graham Delafield @ Prof. Lingjun Li Lab, UW-Madison <br>
+											<p>by <strong>Graham Delafield</strong> @ Prof. <a href="lilabs.org">Lingjun Li Lab</a>, UW-Madison <br>
 											September 18, 2020</p>
 											<p>Looking back on his time in the Li Research Group, postdoctoral fellow 
 											Dr. Gongyu Li believes his time spent in Madison was fundamental to his 
