--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@
 										<h2><strong>"More Native" Structural Mass Spectrometry:</strong> </h2>
 										<h2><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 									</header>
-									<a class="image featured"><img src="images/limslab_projects_full.jpg" width="50%" height="50%" alt="" /></a>
+									<span class="image featured"><img src="images/limslab_projects_full.jpg" alt="" /></span>
 									<h3><U><strong><font color='red'>Rapid: Nanosecond Photochemical Structure Probing</font></strong></U></h3>
 									<p>Dr. Li has the long-standing research interest focusing on the development 
 									and application of <strong>ultrafast</strong> separation techniques capable of in situ purification 
