--- a/news.html
+++ b/news.html
@@ -64,6 +64,7 @@
 															</header>
 															<p>We are SO excited to share this unique research group (<strong>LimsLab @ NKU</strong>) site to the whole
 															world. The LimsLab group site has been officially released on Oct 2nd, 2020. Hello, World! Hello, LimsLab! </p>
+															<span class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></span>
 														</article>
 
 												</li>
