--- a/research.html
+++ b/research.html
@@ -129,21 +129,21 @@
 									The unique gas-phase charge-state-distribution phenomenon that is distinct from  native solution phase, not only 
 									adds uncertainties of the structural gaps between these two phases, but also increases the time cost and degrades 
 									the confidence of gas-phase structural measurements.</p>
-									<p>To effectively and confidently dissect the sialylation effects on the overall 3D arrangements of glycoproteins 
-									with high-level microheterogeneity, the power of Native IM-based <strong>Lossless Structural MS (LSMS)</strong> strategy is 
-									demonstrated on a model carrier glycoprotein TF. To overcome the barrier of multistep, time-consuming 
+									<p>To effectively and confidently dissect the PTM effects on the overall 3D arrangements of glycoproteins 
+									with high-level microheterogeneity, we introduce Native IM-based <strong>Lossless Structural MS (LSMS)</strong> strategy. 
+									To overcome the barrier of multistep, time-consuming 
 									charge-selection/optimization processes and charge-bias effects on protein structures, the LSMS strategy 
 									adopts a “charge selection-free” concept, in which all forms of protein ions’ structures and topologies 
 									are accounted for, and no precursor ion selection is mandatory. Namely, all ions are diverted into the activation cell. 
 									In this way, we manage to perform <strong>all ion unfolding/fragmentation (AIU/AIF)</strong> sequentially in a charge-independent manner 
 									on sialylated glycoproteins. The LSMS additionally relies on the further modifications of data visualization and 
-									quantitative characterization based on the CIUSuite and UniDec, which allow for not only the reliable tracking of rapid, 
+									quantitative characterization based on the CIUSuite and UniDec. By using a model sialylated glycoprotein transferrin (TF), LSMS allows for not only the reliable tracking of rapid, 
 									efficient and in situ releasing of sialic acids and the simultaneous, charge-independent stepwise unfolding of native-like 
 									glycoproteins, but also unprecedentedly revealing the differential roles of Neu5Ac and Neu5Gc sialylations in fine-tuning 
 									of glycoprotein structures and topologies. </p>
-									<p>Our results not only provide new molecular signatures for the preclinical functions of terminal sialylation, but also 
+									<p>These results not only provide new molecular signatures for the preclinical functions of PTMs, but also 
 									indicate that inhibitors that sustain Neu5Ac level at suitable values could be pursued as potential therapeutics to slow 
-									the progression of several sialylated glycoprotein-linked diseases, including AD.1 Furthermore, we envision that the preclinical 
+									the progression of several sialylated glycoprotein-linked diseases, including AD. Furthermore, we envision that the preclinical 
 									implications and underexplored molecular basis of glycosylation other than terminal sialylations attainable using our LSMS platform 
 									will find promising applications in other target glycoproteins in both health and disease conditions. It will be of great 
 									interest to apply the current strategy to revealing molecular and structural basis for the association of the O-GlcNAcylation 
