--- a/index.html
+++ b/index.html
@@ -117,28 +117,28 @@
 											<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
 											<p>To ultimately provide molecular basis and next-generation therapeutics for human disease, 
 											<U><strong>Dr. Gongyu Li</strong></U> has long-standing research interests in the development and application of 
-											ultrafast separation-equipped mass spectrometry (MS) techniques capable of: <strong>1)</strong> in situ 
-											identification, <strong>2)</strong> rapid structural elucidation and <strong>3)</strong> expedited functional interrogation 
+											ultrafast separation-equipped mass spectrometry (MS) techniques capable of: 1) in situ 
+											identification, 2) rapid structural elucidation and 3) expedited functional interrogation 
 											of human disease-linked bioactive molecules, including differentially folded proteins/
 											neuropeptides/metabolites, directly from living cells or even fresh tissues. The most 
 											significant <strong>challenge</strong> is, however, how to remove intracellular and extracellular matrices 
 											surrounding target biomolecules without external perturbations on their native biological 
 											states, where the separation time scale should be as short as possible to maintain the 
 											biologically relevant structural information. To solve this problem, during his PhD career, Dr. Li has involved in  
-											the development of a <U>Ultrafast Separation</U> regime and integrated into nanospray, generating a 
+											the development of an ultrafast separation regime and integrated into nanospray, generating a 
 											new versatile ambient MS method (Li et al. 
 											Anal. Chem. 2016, 88, 10860-10866), and has demonstrated its utility for several protein 
 											systems directly from living cells (Li et al. Anal. Chem. 2018, 90, 3409-3415). In addition 
 											to contribution to the <strong>Ultrafast MS</strong> identification of native proteins, Gongyu also devoted himself 
 											in gas-phase protein structural interrogations, such as the development of a new regime for 
-											<strong>ion mobility-mass spectrometry (IM-MS)</strong>-based protein structural manipulations (Li et al. 
+											ion mobility-mass spectrometry (IM-MS)-based protein structural manipulations (Li et al. 
 											Anal. Chem. 2018, 90, 7997-8001). Dr. Li’s postdoc research work is focused on further 
 											expanding MS methodologies for <U>better identification and structural interrogation of human 
 											health-linked bioactive molecules</U>, ranging from native proteins, neuropeptides to metabolites. 
 											To this end, Gongyu has already developed a new <strong>millisecond ion mobility separation platform</strong> 
 											to investigate chiral effect of amyloid beta peptide and its implications in Alzheimer’s disease 
-											therapeutic development (Li et al. <i><strong>Nat. Commun.</strong></i> 2019, 10, 5038) and a nanosecond photochemical 
-											click chemistry method for rapid neuropeptide and protein structural analysis (Li et al. 
+											therapeutic development (Li et al. <i><strong>Nat. Commun.</strong></i> 2019, 10, 5038) and a <strong>nanosecond photochemical 
+											click chemistry</strong> method for rapid neuropeptide and protein structural analysis (Li et al. 
 											<i><strong>Nat. Commun.</strong></i> 2019, 10, 4697, Featured by Nature Communications Editors HIGHLIGHTS). 
 											Dr. Li’s research efforts, overall, have generated 4 grants, 7 fellowships/awards, 
 											6 oral presentations and 29 scientific publications to date, including 2 Nat. Commun., 
