--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
 									
 
 								</div>
+								<div class="col-12">
+								<ul class="actions">
+									<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
+								</ul>
+								</div>
 
 						</div>
 					</div>
