--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font> </a></h1>
-							<p><strong>Native Structural Mass Spectrometry</strong></p>
+							<p><h2>Native Structural Mass Spectrometry</h2></p>
 
 						<!-- Nav -->
 							<nav id="nav">
