--- a/publication.html
+++ b/publication.html
@@ -18,8 +18,9 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
-							<p><strong>Native Structural Mass Spectrometry</strong></p>
-
+							<p><font color='black'><strong>Native Structural Mass Spectrometry</strong></font></p>
+							<font color='light gray'>Towards Living Single-cell Protein Structures</font>
+							
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
