--- a/research.html
+++ b/research.html
@@ -18,7 +18,8 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
-							<p><strong>Native Structural Mass Spectrometry</strong></p>
+							<p><font color='black'><strong>Native Structural Mass Spectrometry</strong></font></p>
+							<font color='light gray'>Towards Living Single-cell Protein Structures</font>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -215,8 +216,15 @@
 								</article>
 
 						</div>
+						<div class="col-12">
+							<ul class="actions">
+								<li><a href="research.html" class="button icon solid fa-file"> Get Me Back Research </a></li>
+							</ul>
+						</div>
 					</div>
+					
 				</section>
+				
 
 			<!-- Footer -->
 				<section id="footer">
