--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font> </a></h1>
-							<p><h2>Native Structural Mass Spectrometry</h2></p>
-
+							<p><font color='black'><strong>Native Structural Mass Spectrometry</strong></font></p>
+							<font color='light gray'>Towards Living Single-cell Protein Structures</font>
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
@@ -149,16 +149,16 @@
 															<header>
 																<span class="date">LimsLab简介</span>
 															</header>
-															<p><strong>为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
-															多方面的不足，LimsLab提出新型结构质谱的概念，将整合原位蛋白质质谱、离子迁移结构质谱和靶向蛋白质
-															组学的优势，开发出一整套针对蛋白结构及蛋白修饰构效关系的超快质谱分析方法。LimsLab课题组在蛋白质
+															<p>为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
+															多方面的不足，LimsLab提出<strong>新型结构质谱</strong>的概念，将整合原位蛋白质质谱、离子迁移结构质谱和靶向蛋白质
+															组学的优势，开发出一整套针对蛋白结构及蛋白修饰构效关系的超快质谱分析方法，长期目标为实现<strong>单个活细胞蛋白质结构</strong>的快速质谱分析。LimsLab课题组在蛋白质
 															质谱方向上有近十年的研究经验，包括质谱基础理论研究、新型快速原位灵敏的质谱分析方法开发以及在
 															阿尔茨海默症相关蛋白结构研究中的应用研究。LimsLab将以为人类疾病的发病机制和早期诊疗提供蛋白质
 															分子机制水平上的新视角新策略为核心任务，技术上重点解决蛋白质结构质谱分析时存在的技术难题，
 															科学上重点关注低丰度蛋白质翻译后修饰如氨基酸手性突变和唾液酸化等对蛋白结构和功能的影响。
 															具体方向包括：（1）超快结构质谱一步检测活细胞内蛋白结构及其相互作用（原位蛋白鉴定）；（2）无损
 															结构质谱方法学开发及其用于蛋白修饰构效关系研究（结构无损分析）；（3）新型高分辨结构质谱用于
-															人类疾病关键蛋白的手性拆分（功能应用研究）。</strong></p>
+															人类疾病关键蛋白的手性拆分（功能应用研究）。</p>
 														</article>
 								
 
@@ -211,7 +211,7 @@
 															<header>
 																<span class="date">导师简介</span>
 															</header>
-															<p><strong>李功玉，男，南开大学化学学院特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
+															<p><strong>李功玉</strong>，男，南开大学化学学院特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
 															获理学博士学位，指导老师为国家杰青、中组部青千、单细胞质谱专家黄光明教授。2017年08月至2021年1月在美国威斯康星大学
 															麦迪逊分校进行博士后研究，合作导师为药学院Lingjun Li（李灵军）教授（质谱顶级期刊JASMS副主编、全球50大杰出女性科学
 															家之一）。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习，合作导师为结构质谱专家、密歇根大学终身
@@ -220,7 +220,7 @@
 															（主持），并获批一项中国授权专利。鉴于在超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会
 															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，李博士
 															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
-															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</strong></p>
+															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</p>
 														</article>
 
 												</li>
@@ -231,9 +231,9 @@
 
 								</div>
 								<div class="col-12">
-								<ul class="actions">
-									<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
-								</ul>
+									<ul class="actions">
+										<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
+									</ul>
 								</div>
 
 						</div>
