--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<header>
 											<h3>Native IM-MS+</h3>
 										</header>
-										<p>As a key structural mass spectrometric tool, <strong>Native IM-MS</strong> is greatly comprementary to probing proein structure
+										<p><strong>Native IM-MS</strong> is greatly comprementary to probing proein structure
 										with unprecedented analytical speed and great economics in sample consumption.</p>
 									</section>
 
@@ -69,8 +69,8 @@
 										<header>
 											<h3>Ultrafast SMS+</h3>
 										</header>
-										<p> <strong>Ultrafast SMS</strong> is a new structural MS conception/tool which aims to rapidly and reliably assess protein 3D structures and 
-										subtle conformational changes arising from biological process-derived stimulus, as fast as <a href="https://www.nature.com/articles/s41467-019-12548-0">nanosecond time scale</a>. </p>
+										<p> <strong>Ultrafast SMS</strong> is aimed to rapidly track protein 3D structural and 
+										conformational changes arising from biological stimulus, as fast as <a href="https://www.nature.com/articles/s41467-019-12548-0"><strong>nanosecond</strong></a>. </p>
 									</section>
 
 							</div>
