--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<header>
 											<h3>Native IM-MS+</h3>
 										</header>
-										<p><strong>Native IM-MS</strong> is greatly comprementary to probing proein structure
+										<p><strong>Native IM-MS</strong> probes proein structures at Dalton mass resolution
 										with unprecedented analytical speed and great economics in sample consumption.</p>
 									</section>
 
