--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											<h3>Native IM-MS+</h3>
 										</header>
 										<p><strong>Native IM-MS</strong> probes proein structures at Dalton mass resolution
-										with unprecedented analytical speed and great economics in sample consumption.</p>
+										with unprecedented analytical speed and economics in sample consumption.</p>
 									</section>
 
 							</div>
