--- a/people.html
+++ b/people.html
@@ -27,9 +27,9 @@
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
 									<li><a class="icon fa-chart-bar" href="people.html" ><span>People</span></a>
 										<ul>											
-											<li><a href="people.html">Current Members</a></li>
-											<li><a href="people.html">Alumni</a></li>
-											<li><a href="people.html">Collaborators</a></li>
+											<li><a href="people.html#Team">Current Members</a></li>
+											<li><a href="people.html#Alumni">Alumni</a></li>
+											<li><a href="people.html#Collaborator">Collaborators</a></li>
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
@@ -46,7 +46,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Team Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U><a name="Team">Team Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -141,7 +141,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Alumni Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U><a name="Alumni">Alumni Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -224,7 +224,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Collaborator Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U><a name="Collaborator">Collaborator Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
